--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,13 +7,14 @@
     <string name="grid_view">Grid View</string>
     <string name="error_fragment">Error Fragment</string>
     <string name="personal_settings">Личные Настройки</string>
+    <string name="playback_info">Год: %1$s, Жанр: %2$s</string>
     <string name="search_results">Найдено для \'%1$s\'</string>
     <string name="no_search_results">Ничего не найдено для \'%1$s\'</string>
-    <string name="lb_search_bar_hint" msgid="8325490927970116252">"Поиск"</string>
-    <string name="lb_search_bar_hint_speech" msgid="5511270823320183816">"Произнесите запрос"</string>
-    <string name="lb_search_bar_hint_with_title" msgid="1627103380996590035">"Поиск здесь: <ns1:g id="SEARCH_CONTEXT">%1$s</ns1:g>"</string>
-    <string name="lb_search_bar_hint_with_title_speech" msgid="2712734639766312034">"Произнесите запрос, чтобы найти <ns1:g id="SEARCH_CONTEXT">%1$s</ns1:g>"</string>
-    <string name="orb_search_action" msgid="5651268540267663887">"Поиск"</string>
+    <string name="lb_search_bar_hint" msgid="8325490927970116252">Поиск</string>
+    <string name="lb_search_bar_hint_speech" msgid="5511270823320183816">Произнесите запрос</string>
+    <string name="lb_search_bar_hint_with_title" msgid="1627103380996590035">Поиск здесь: <ns1:g id="SEARCH_CONTEXT">%1$s</ns1:g></string>
+    <string name="lb_search_bar_hint_with_title_speech" msgid="2712734639766312034">Произнесите запрос, чтобы найти <ns1:g id="SEARCH_CONTEXT">%1$s</ns1:g></string>
+    <string name="orb_search_action" msgid="5651268540267663887">Поиск</string>
 
     <!-- Error messages -->
     <string name="error_fragment_message">Возникла ошибка</string>
