Переписан немного код запросов, усилена паралеллизация. Отсечение событий, используемых одновременно в разных фрагментах, сериализация очерёдности применения ответов

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources xmlns:ns1="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name">AnimeVostTV</string>
-    <string name="browse_title">Видео предоставлены AnimeVost</string>
+    <string name="browse_title">Видео предоставлены AnimeVost v0.1</string>
     <string name="related_movies">Связанные видео</string>
     <string name="series_list">Список серий</string>
     <string name="recent">Недавние просмотры</string>
